--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,14 +42,16 @@ dependencies:
   shared_preferences: ^2.0.13
   json_annotation: ^4.1.0
   scroll_to_index: ^2.1.1
-  wechat_assets_picker: ^7.0.2
-  wechat_camera_picker: ^3.0.1
+  wechat_assets_picker: 8.4.3
+  wechat_camera_picker: 3.8.0
+  camera: ^0.10.3+1
+  camera_android: ^0.10.4+1
   flutter_easyrefresh: ^2.2.1
   flutter_spinkit: ^5.1.0
-  extended_image: ^6.0.2+1
+  extended_image: 7.0.2
   package_info_plus: ^1.4.0
   loading_animation_widget: ^1.1.0+3
-  permission_handler: ^9.2.0
+  permission_handler: 10.3.0
   tuple: ^2.0.0
 #  flutter_screenutil: ^5.5.3+2
   flutter_markdown: ^0.6.9
@@ -57,6 +59,7 @@ dependencies:
   link_preview_generator: ^1.2.0
   tencent_im_base: ^0.0.30
   flutter_plugin_android_lifecycle: ^2.0.7
+  device_info_plus: any
 #  tencent_im_base:
 #     path: /Users/wangrunlin/Documents/GitHub/im-flutter-base
 
