--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   video_thumbnail: ^0.4.3
   image_gallery_saver: ^1.7.1
   photo_view: ^0.13.0
-  fluttertoast: ^8.0.8
+  fluttertoast: any
   dio: ^4.0.4
   path_provider: ^2.0.8
   characters: ^1.1.0
